syntax = "proto3";
package proto;

import "google/protobuf/timestamp.proto";
import "Message.proto";

option go_package = "github.com/openline-ai/openline-customer-os/packages/server/message-store-api/proto/generated";

enum FeedItemState {
  NEW = 0;
  IN_PROGRESS = 1;
  CLOSED = 2;
}

message MessageListResponse {
  repeated Message messages = 1;
}

message ParticipantsListResponse {
  repeated string participants = 1;
}
message ParticipantObjectListResponse {
  repeated Participant participants = 1;
}

message FeedId {
  string id = 1;
}
message FeedItem {
  string id = 1;

  //used to produce a record in the feed
  string initiatorFirstName = 2;
  string initiatorLastName = 3;
  ParticipantId initiatorUsername = 4;
  string initiatorType = 5;

  //used to produce the preview in the feed
  string lastSenderFirstName = 6;
  string lastSenderLastName = 7;

  string lastContentPreview = 8;
  google.protobuf.Timestamp lastTimestamp = 9;
}
message FeedItemPagedResponse {
  repeated FeedItem feedItems = 1;
  int32 totalElements = 2;
}

message GetFeedsPagedRequest {
  repeated FeedItemState stateIn = 1;
  int32 page = 2;
  int32 pageSize = 3;
  bool onlyContacts = 4;
}

message PageInfo {
  optional google.protobuf.Timestamp before = 1;
  int32 pageSize = 2;
}

message PagedMessages {
  FeedId feed = 1;
  optional PageInfo page = 2;
}

service MessageStoreService {
  rpc getFeeds(GetFeedsPagedRequest) returns (FeedItemPagedResponse) {};
  rpc getFeed(FeedId) returns (FeedItem) {};

  rpc getMessagesForFeed(PagedMessages) returns (MessageListResponse) {};
  rpc getMessage(MessageId) returns (Message) {};
  rpc saveMessage(InputMessage) returns (MessageId) {};
  rpc getParticipants(FeedId) returns (ParticipantsListResponse) {};
  rpc getParticipantIds(FeedId) returns (ParticipantObjectListResponse) {};

}
